--- a/.cdmrc
+++ b/.cdmrc
@@ -1,3 +1,3 @@
-terminals: ['echo one', 'echo two', 'echo three']
+terminals: ['npm i', 'npm install -D tailwindcss postcss autoprefixer', 'npx tailwindcss init -p', 'npm run dev', ]
 playground-view: terminal-editor-browser
 run-button: clear && npm run dev
